--- a/css/4-destaques.css
+++ b/css/4-destaques.css
@@ -65,6 +65,8 @@
     scroll-behavior: smooth;
     padding: 0px;
     gap: 5px;
+    padding-left: 12px;
+    padding-right: 12px;
   }
   .destaques .destaques-item {
     float: left;
